crates/compiler/cypress/tests/snapshots/test_parse__ops_with_newlines_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "3\n+\n\n4\n"
---
(BeginFile
    (BeginTopLevelDecls
        (* HintExpr Num=>Int@0 InlineBinOpPlus=>OpPlus@1 Num=>Int@2 EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("3"), Plus, IntBase10("4"))

[=== formatted below ===]

