crates/compiler/cypress/tests/snapshots/test_parse__outdented_list_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "a = [\n  1, 2, 3\n]\na\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginList Num=>Int@3 Num=>Int@5 Num=>Int@7 EndList)
        EndAssignDecl)
        HintExpr
        Ident=>LowerIdent@9
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("a"), List([IntBase10("1"), IntBase10("2"), IntBase10("3")]))
Ident("a")

[=== formatted below ===]

